# netcdf-cf-coercer

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: README.md  checks-and-reports.md  cli.md  development.md  getting-started.md  python-api.md  troubleshooting.md
docs/stylesheets/: extra.css
output/: tmp-check.html
output/jupyter-notebook/: cf-coercer-example.ipynb  output.html
src/nc_check/: __init__.py  accessor.py  cli.py  core.py  formatting.py  heuristic.py  ocean.py  report_templates.py  standard_names.py
src/netcdf_cf_coercer/: accessor.py  cli.py  core.py  standard_names.py
tests/: test_accessor.py  test_cli.py  test_core.py  test_dask_lazy.py  test_formatting.py  test_ocean.py  test_standard_names.py
