[project]
name = "nc-check"
version = "0.2.0"
description = "Prepare xarray Datasets for CF-1.12 compliant NetCDF output"
readme = "README.md"
authors = [
    { name = "lukegre", email = "lukegre@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "netcdf4",
    "numpy>=1.24",
    "rich>=14.3.2",
    "xarray>=2023.1",
]

[project.optional-dependencies]
cf = [
    "cfchecker",
    "cfunits>=3.3.7",
]

[dependency-groups]
dev = [
    "dask[array]>=2024.8",
    "ipykernel>=7.2.0",
    "pytest>=7.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
nc-check = "nc_check.cli:main_check"
nc-comply = "nc_check.cli:main_comply"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
